# jniopencv

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/simon/a/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AVL.hpp  BST.hpp  BitmapMatUtil.cpp  BitmapMatUtil.h  DZAudio.cpp  DZAudio.h  DZFFmpeg.cpp  DZFFmpeg.h  DZMedia.cpp  DZMedia.h  DZVideo.cpp  DZVideo.h  Hello.cpp  Hello.h  NativeImgproc.cpp  NativeMat.cpp  NativeUtils.cpp  PriortyQueen.hpp  Simple.cpp  Simple1.cpp  bitmap_util.cpp  bitmap_util.h  cardorc.cpp  cardorc.h  cv_helper.cpp  cv_helper.h  huffman.cpp  map.hpp  native-lib.cpp  video-player.cpp
app/src/main/java/com/darren/ndk/day78/: FaceDetection.java  MainActivity.java
app/src/main/java/com/simon/a/: BitmapUtils.java  MainActivity.java  Simple1.java
app/src/main/java/com/simon/a/jni/: JNICard.java  LinkedList.hpp
app/src/main/java/com/simon/a/jni/listener/: MediaErrorListener.java
app/src/main/java/com/simon/a/jni/media/: DZVideoView.java  DarrenPlayer.java
app/src/main/java/com/simon/a/jni/media/listener/: MediaErrorListener.java  MediaPreparedListener.java
app/src/main/java/com/simon/a/jni/video/player/: MainActivity.java
app/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  OpenCVLoader.java  Utils.java
app/src/main/java/org/opencv/core/: Core.java
app/src/main/java/org/opencv/imgproc/: Imgproc.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/simon/a/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
kotlinstudy/: build.gradle
kotlinstudy/src/androidTest/java/com/simon/kotlinstudy/: ExampleInstrumentedTest.kt
kotlinstudy/src/main/: AndroidManifest.xml
kotlinstudy/src/main/java/com/simon/kotlinstudy/: MainActivity.kt
kotlinstudy/src/main/kotlin/com/shengsiyuan/coroutines/: HelloKotlin1.kt  HelloKotlin10.kt  HelloKotlin11.kt  HelloKotlin12.kt  HelloKotlin2.kt  HelloKotlin3.kt  HelloKotlin4.kt  HelloKotlin5.kt  HelloKotlin6.kt  HelloKotlin7.kt  HelloKotlin8.kt  HelloKotlin9.kt
kotlinstudy/src/main/kotlin/com/shengsiyuan/coroutines2/: HelloKotlin1.kt  HelloKotlin2.kt  HelloKotlin3.kt  HelloKotlin4.kt  HelloKotlin5.kt  HelloKotlin6.kt  HelloKotlin7.kt
kotlinstudy/src/main/kotlin/com/shengsiyuan/coroutines3/: HelloKotlin1.kt  HelloKotlin2.kt  HelloKotlin3.kt  HelloKotlin4.kt  HelloKotlin5.kt  HelloKotlin6.kt
kotlinstudy/src/main/kotlin/com/shengsiyuan/coroutines4/: HelloKotlin1.kt  HelloKotlin10.kt  HelloKotlin11.kt  HelloKotlin2.kt  HelloKotlin3.kt  HelloKotlin4.kt  HelloKotlin5.kt  HelloKotlin6.kt  HelloKotlin7.kt  HelloKotlin8.kt  HelloKotlin9.kt
kotlinstudy/src/main/kotlin/com/shengsiyuan/coroutines5/: HelloKotlin1.kt  HelloKotlin10.kt  (+23 more)
(+134 files in other folders)
